Fix horizontal scroll on home page

--- a/styles/components/_utils.scss
+++ b/styles/components/_utils.scss
@@ -7,7 +7,6 @@
 }
 
 body {
-
     font-family: 'Cormorant Garamond', serif;
 
     // wrapper is used to have a sticky footer
@@ -16,7 +15,7 @@ body {
         flex-direction: column;
         flex-grow: 1;
         min-height: 100vh;
-        padding: 0;
+        padding: 0px;
         justify-content: space-between;
     }
 
