--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -12,7 +12,7 @@ body .wrapper {
   flex-direction: column;
   flex-grow: 1;
   min-height: 100vh;
-  padding: 0;
+  padding: 0px;
   justify-content: space-between;
 }
 body a {
@@ -41,7 +41,7 @@ body .wrapper {
   flex-direction: column;
   flex-grow: 1;
   min-height: 100vh;
-  padding: 0;
+  padding: 0px;
   justify-content: space-between;
 }
 body a {
@@ -153,7 +153,7 @@ body .wrapper {
   flex-direction: column;
   flex-grow: 1;
   min-height: 100vh;
-  padding: 0;
+  padding: 0px;
   justify-content: space-between;
 }
 body a {
