--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -5,8 +5,8 @@ body {
      .backgroundimage {
         background-image: url("../../img/background.jpg");
         z-index: -1;
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -40,8 +40,4 @@ body {
             }
         }
     }
-}
-
-body {
-    font:100;
 }
